-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
3
-
9223372036854775807
Project quota is not mapping correctly for tenants
nodemap.c1.admin_nodemap=1
nodemap.c1.audit_mode=1
nodemap.c1.deny_unknown=1
nodemap.c1.exports=
[
{ nid: 10.73.20.2@tcp, uuid: 69459cf9-38cb-43de-b160-06f03dbd7a43 }
]
nodemap.c1.fileset=/tenants/c1
nodemap.c1.forbid_encryption=0
nodemap.c1.id=4
nodemap.c1.idmap=[]
nodemap.c1.map_mode=projid
nodemap.c1.offset=
{
start_uid: 100000,
limit_uid: 100000,
start_gid: 100000,
limit_gid: 100000,
start_projid: 100000,
limit_projid: 100000
}
nodemap.c1.ranges=
[
{ id: 66, start_nid: 10.73.20.2@tcp, end_nid: 10.73.20.2@tcp }
]
nodemap.c1.rbac=file_perms,server_upcall,local_admin
nodemap.c1.readonly_mount=0
nodemap.c1.sepol=
nodemap.c1.squash_gid=65534
nodemap.c1.squash_projid=0
nodemap.c1.squash_uid=65534
nodemap.c1.trusted_nodemap=0
Client Quota view:
[root@client1 client]# lfs quota -p 0 /lustre/fs/client/ Disk quotas for prj 0 (pid 0): Filesystem kbytes quota limit grace files quota limit grace /lustre/fs/client/ 102408 0 0 - 3 0 0 - [root@client1 client]# lfs quota -p 1 /lustre/fs/client/ Disk quotas for prj 1 (pid 1): Filesystem kbytes quota limit grace files quota limit grace /lustre/fs/client/ 102408 0 1073741824 - 3 0 0 -
The tenant project quota SHOULD be querable as ID 0, but it's getting the global filesystem project ID 0 and not it's own project ID. But if it asks for any other ID, it get's squashed to "0" which is then translated to 100000.