LU-18936 quota: correct limits for squashed root

As root doesn't have quota limits, it's limits have been always set to
zero at client side. However, qid=0 can be changed according to the
nodemap at the MDT. As clients don't know about the mapping, quota
limits must to be set to zero only on the MDT.

Signed-off-by: Sergey Cheremencev <scherementsev@ddn.com>
Change-Id: Ibdfd70d0cf4987a6e99e4ee07d7308a6865116ad
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/58886
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Sebastien Buisson <sbuisson@ddn.com>
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>